<resources>
    <string name="app_name">Flow Test</string>

    <!-- Accueil -->
    <string name="info">info</string>
    <string name="start">New Flow test</string>
    <string name="stop">Stop the test</string>
    <string name="add">Answer now</string>
    <string name="results">Results</string>
    <string name="settings">Settings</string>
    <string name="press_return">Press return a second time to exit</string>
    <string name="counter1">Survey ongoing:</string>
    <string name="counter2">samples recorded</string>
    <string name="stop_confirmation">Are you sure you want to terminate the current test?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome">Welcome to Flow test! \n\nThis app will help you identify which conditions bring you to a state of flow. \n\nStart a new Flow test, and the app will send you questionnaires at random intervals, in order to measure your flow experience!</string>
    <string name="started">The test is started! \nThe app will soon start to send you notifications at random times. \n\n Answer to the questionnaires when you can after receiving notifications!</string>

    <!-- Settings -->
    <string name="settings_title">Select the following:</string>
    <string name="start_day">- Start of your day:</string>
    <string name="end_day">- End of your day:</string>
    <string name="nb_samples">- Number of samples:</string>
    <string name="use_gps">Allow the app to record GPS data</string>
    <string name="start_notifications">Start the Flow test!</string>
    <string name="toastStart">Flow test started!</string>

    <!-- Notifications -->
    <string name="channel_id">channel_id</string>
    <string name="channel_name">Flow_channel</string>
    <string name="channel_description">This is the channel used by Flow Test</string>
    <string name="notifTitre"> Learn what brings you to a flow state!</string>
    <string name="notifText1"> Answer now to questionnaire number </string>
    <string name="notifText2"> </string>


    <!--Sample -->
    <string name="sample_01_when_notif">When you received the notification&#8230;</string>
    <string name="sample_02_where"><b>Where</b> were you?</string>
    <string name="sample_03_what">What was the <b>main thing</b> you were <b>doing</b>?</string>
    <string name="sample_04_what_else"><b>What else</b> were you doing at the same time?</string>
    <string name="sample_05_mind">What was <b>on your mind</b>?</string>

    <string name="sample_11_alone">Were you alone?</string>
    <string name="sample_12_alone_yes">Yes</string>
    <string name="sample_13_alone_no">No</string>
    <string name="sample_14_or_with">&#8230; or were you with&#8230; (please check all that apply)</string>
    <string name="sample_15_spouse">your spouse</string>
    <string name="sample_16_boss">your boss</string>
    <string name="sample_17_coworker">co-workers</string>
    <string name="sample_18_friends">friend(s)</string>
    <string name="sample_19_girl_boyfriend">girl/boyfriend</string>
    <string name="sample_20_mother">your mother</string>
    <string name="sample_21_father">your father</string>
    <string name="sample_22_teacher">teacher</string>
    <string name="sample_23_classmate">classmates/peers</string>
    <string name="sample_24_other">other(s)</string>
    <string name="sample_25_children">your child(ren)</string>
    <string name="sample_26_children_who">(please indicate who)</string>
    <string name="sample_27_siblings">your sibling(s)</string>
    <string name="sample_28_siblings_who">(please indicate who)</string>

    <string name="sample_41_why_activity1">Think back on how you got into this activity&#8230;</string>
    <string name="sample_42_why_activity2">Were you doing this <b>main activity</b> because you&#8230;</string>
    <string name="sample_43_wanted">(1) wanted to</string>
    <string name="sample_44_had">(2) had to</string>
    <string name="sample_45_nothing_else">(3) had nothing else to do</string>

    <string name="sample_51_how_felt">Indicate how you felt about the main activity.</string>
    <string name="sample_52_not_at_all">Not at all</string>
    <string name="sample_53_little">A little</string>
    <string name="sample_54_somewhat">Somewhat</string>
    <string name="sample_55_very_much">Very much</string>
    <string name="sample_56_enjoy">Did you <b>enjoy</b> what you were doing?</string>
    <string name="sample_57_interesting">Was this activity <b>interesting</b>?</string>
    <string name="sample_58_concentrating">How well were you <b>concentrating</b>?</string>
    <string name="sample_59_expectations">Were you living up to <b>your own expectations</b>?</string>
    <string name="sample_60_control">Did you feel <b>in control</b> of the situation?</string>
    <string name="sample_61_involved">Did the situation allow you to be <b>involved</b> or <b>to act</b>?</string>
    <string name="sample_62_deal">Did you have the <b>abilities to deal</b> with the situation?</string>
    <string name="sample_63_important">Was the activity <b>important to you</b>?</string>
    <string name="sample_64_others_expectations">Were others <b>expecting</b> a lot from you?</string>
    <string name="sample_65_succeeding">Were you <b>succeeding</b> at what you were doing?</string>
    <string name="sample_66_something_else">Did you wish you <b>were doing something else</b>?</string>
    <string name="sample_67_feel_good">Did you <b>feel good</b> about yourself?</string>

    <string name="autofill">Please be specific</string>
    <string name="bouton_previous">Previous</string>
    <string name="bouton_next">Next</string>
    <string name="bouton_finish">Done</string>

    <string name="error_data_incomplete">Please answer all questions</string>

    <!-- AlertDialog Survey end-->
    <string name="survey_end_title">Flow test completed!</string>
    <!--<string name="survey_end_prompt">Do you want to see the results?</string>-->
    <string name="survey_end_seeresults">See Results</string>
    <string name="survey_end_later">Later</string>
    <string name="send_results">Do you want to send the results in order to help improve the app?</string>

    <!-- AlertDialog Intermediate-->
    <string name="intermediate_title">Almost there!</string>
    <string name="intermediate_prompt">Do you want to see your preliminary results?</string>
    <string name="intermediate_seeresults">See Results</string>
    <string name="intermediate_later">Later</string>


    <!-- Saving -->
    <string name="save_complete">Questionnaire recorded</string>
    <string name="save_error">Error when recording the questionnaire</string>
    <string name="save_cancelled">Recording cancelled</string>


    <!-- Results-->
    <string name="detailed_results">Detailed Results</string>
    <string name="number_of_samples">Number of samples = </string>
    <string name="what">What?</string>
    <string name="top_what">The things you were doing when you were the most in Flow:</string>
    <string name="who">Who with?</string>
    <string name="top_who">The persons with whom you were when you were the most in Flow:</string>
    <string name="where">Where?</string>
    <string name="top_where">The places where you were when you were the most in Flow:</string>
    <string name="why">Why?</string>
    <string name="when">When?</string>
    <string name="best_day">Flow index per day: </string>
    <string name="alone">Alone</string>

    <string name="blank"></string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string-array name="weekdays">
        <item>@string/blank</item>
        <item>@string/sunday</item>
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
    </string-array>

    <!-- Detailed results-->
    <string name="date">Date: </string>


    <!-- Info Popup-->
    <string name="popup_what_flow_title">What is Flow?</string>
    <string name="popup_what_flow"><b>Flow</b> is the mental state in which a person performing an activity is <b>fully immersed</b> in a feeling of energized focus, full involvement, and enjoyment in the process of the activity. \n\nIn essence, flow is characterized by the complete absorption in what one does, and a resulting <b>transformation in one\'s sense of time</b>. </string>

    <string name="notsureyet">Flow is important both because it makes the present instant <b>more enjoyable</b>, and because it <b>builds the self-confidence</b> that allows us to develop skills and make significant contributions to humankind.</string>

    <string name="popup_why_flow_title">Why identify you Flow conditions?</string>
    <string name="popup_why_flow">People who learn to control inner experience will be able to <b>determine</b> the quality of their lives, which is as close as any of us can come to <b>being happy</b>.</string>

    <string name="popup_further_title">To go further</string>
    <string name="popup_further">Reading list:
        \n\n - <a href='https://amzn.to/2YKnleQ'>Drive: The Surprising Truth About What Motivates Us</a> by Daniel H Pink
        \n\n - <a href='https://amzn.to/2AjGdb8'>Flow: The Psychology of Optimal Experience</a> by Mihály Csíkszentmihályi
    </string>
    <string name="popup_close">Close</string>

</resources>
