<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoPopActivity"
    android:background="@drawable/pop_bg"
    >

<!--
    <ImageView
        android:id="@+id/popup_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:elevation="5dp"
        android:src="@drawable/ic_close_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
-->

    <ImageView
        android:id="@+id/popup_prev"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/pop_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/popup_what_flow_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_textfield"
        app:layout_constraintTop_toBottomOf="@+id/pop_title"
        tools:layout_editor_absoluteX="1dp" />

    <!--Content-->

    <TextView
        android:id="@+id/pop_page"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/popup_what_flow"
        android:textAlignment="center"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/popup_next"
        app:layout_constraintStart_toEndOf="@+id/popup_prev"
        app:layout_constraintTop_toBottomOf="@+id/pop_title" />



    <ImageView
        android:id="@+id/popup_next"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/popup_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/popup_close"/>


</androidx.constraintlayout.widget.ConstraintLayout>